# tinygwas

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  requirements.txt  setup.py
.github/workflows/: build_cmake.yml  python.yml
src/: FileUtils.cpp  FileUtils.h  Utils.h  main.cpp
tests/: test.py  test_linear.py
